# Chisel

./: .anchored  .gitignore  KNOWN_ISSUES.md  MANIFEST.in  PLAN.md  README.md  canvas.py  chisel  com.uncapyeti.chisel.desktop  main.py  meson.build  pyproject.toml  style.css  window.py
debug/: __init__.py
document/: flatten.py  fraction_detector.py  image_handler.py  page_manager.py  pdf_document.py  text_model.py
drawing/: callout.py  overlay.py  shapes.py  theme.py
tools/: base.py  callout_tool.py  clipboard.py  cut_tool.py  fraction_edit_tool.py  highlight_tool.py  image_tool.py  line_tool.py  select_tool.py  shape_tool.py  text_edit_tool.py
